# parimana

./: .gitignore  LICENSE  README.md  Untitled.ipynb  compose.yaml  parimana.code-workspace  pyproject.toml
back/: .gitignore  Dockerfile  README.md  Untitled.ipynb  buildspec.yml  pyproject.toml
back/buildenv/: .env.example
back/parimana/: __main__.py  batch.py  celeryconfig.py  context.py  settings.py  webapi.py
back/parimana/analyse/: __init__.py  ability.py  analyse.py  analysers.py  analysis_result.py  chart.py  chart_pl.py  correlation.py  expected.py  mvn_model.py  odds_chance.py  odds_eval.py  win_rate.py
back/parimana/app/: __init__.py  analyse.py  batch.py  collect_odds.py  exception.py  realtime.py  realtime_events.py  realtime_schedule.py  schedule.py  settings.py  status.py
back/parimana/base/: __init__.py  contestants.py  odds.py  odds_pool.py  race.py  race_source.py  situation.py  superiority.py
back/parimana/boatrace/: race.py
back/parimana/devices/: chrome.py
back/parimana/devices/driver/: chrome.py
back/parimana/devices/file/: __init__.py  file_repository.py
back/parimana/devices/redis/: redis_channel.py  redis_kvs.py
back/parimana/devices/s3/: s3_kvs.py
back/parimana/domain/: race.py  schedule.py
back/parimana/domain/analyse/: __init__.py  ability.py  analyse.py  analysers.py  analysis_result.py  chart_pl.py  correlation.py  expected.py  mvn_model.py  mvn_model_triple.py  odds_eval.py  win_rate.py
back/parimana/domain/base/: __init__.py  contestants.py  eye.py  odds.py  situation.py  superiority.py
back/parimana/driver/: modest.py
back/parimana/infra/message/: __init__.py  channel.py  printer.py
back/parimana/interfaces/aws_lambda/: __init__.py  command.py  web.py
back/parimana/interfaces/cui/: analyse.py  main.py
back/parimana/interfaces/web/: __init__.py  main.py  server.py
back/parimana/io/: kvs.py  message.py
back/parimana/message/: __init__.py  printer.py  redis.py
back/parimana/netkeiba/: browse.py  race.py
back/parimana/race/: __init__.py  base.py  fixture.py  odds_pool.py  race_source.py  schedule.py  select.py
back/parimana/race/boatrace/: __init__.py  base.py  browse.py  browser.py  extract.py  extract_schedule.py  fixture.py  race.py  race_id.py  race_source.py  scrape.py  scrape_fixture.py
back/parimana/race/netkeiba/: __init__.py  base.py  browse.py  browser.py  extract.py  race.py  race_source.py  scrape.py
back/parimana/races/: __init__.py  select.py
back/parimana/races/boatrace/: browse.py  extract.py  race_source.py  scrape.py
back/parimana/races/netkeiba/: browse.py  btype.py  extract.py  race.py  race_source.py  scrape.py
back/parimana/repository/: __init__.py  analysis.py  file_repository.py  odds.py  schedule.py  status.py
back/parimana/storage/: race_manager.py
back/parimana/tasks/: __init__.py  analyse.py  base.py  celery.py  celeryconfig.py  decorate_util.py  schedule.py  worker.py
back/parimana/ui/: batch.py
back/parimana/ui/batch/: batch.py  options.py
back/parimana/ui/cui/: analyse.py  argparse.py  main.py
back/parimana/ui/settings/: __init__.py  repositories.py  selector.py  settings.py
back/parimana/ui/web/: __init__.py  analyse.py  main.py  schedule.py
back/parimana/webapi/: analyse.py  events.py  main.py  model.py  router.py  schedule.py
back/script/: build.sh  push_ecr.sh
back/tests/analyse/: test_odds_eval.py
back/tests/base/: test_eye.py
back/tests/io/: test_kvs.py
(+266 files in other folders)
