[tool.poetry]
name = "parimana"
version = "0.1.0"
description = ""
authors = ["Baya Minami <baya.f.minami@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.0.1"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
selenium = "^4.9.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
