[tool.poetry]
name = "parimana"
version = "0.1.0"
description = ""
authors = ["Baya Minami <baya.f.minami@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
parimana = "parimana.ui.cui.main:main"
parimana-schedule = "parimana.ui.cui.main:update_schedule"
parimana-worker = "parimana.ui.cui.main:run_worker"
parimana-web = "parimana.ui.web.main:start"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.0.1"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
selenium = "^4.9.1"
beautifulsoup4 = "^4.12.2"
openpyxl = "^3.1.2"
requests = "^2.31.0"
scikit-learn = "^1.2.2"
fastapi = "^0.103.0"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
redis = "^5.0.0"
celery = "^5.3.1"
plotly = "^5.18.0"
kaleido = "0.2.1"
statsmodels = "^0.14.1"
async-timeout = "^4.0.3"
pydantic-settings = "^2.7.0"
flower = "^2.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2.0"
black = "^23.3.0"
isort = "^5.12.0"
pytest = "^7.3.1"
types-requests = "^2.31.0.1"
notebook = "^6.5.4"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
