[tool.poetry]
name = "parimana"
version = "0.1.0"
description = ""
authors = ["Baya Minami <baya.f.minami@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
parimana = "parimana.interfaces.cui.main:main"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.0.1"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"
statsmodels = "^0.14.1"
openpyxl = "^3.1.2"
plotly = "^5.18.0"
selenium = "^4.9.1"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
fastapi = "^0.115.8"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
mangum = "^0.19.0"
awslambdaric = "^3.0.0"
boto3 = "^1.35.93"
redis = "^5.0.0"
celery = "^5.3.1"
flower = "^2.0.1"
pydantic-settings = "^2.7.0"
async-timeout = "^4.0.3"
toolz = "^1.0.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^1.2.0"
black = "^25.1.0"
isort = "^5.12.0"
pytest = "^7.3.1"
types-requests = "^2.31.0.1"
notebook = "^6.5.4"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
